# SIMC_C_ROOT

./: .gitignore  CMakeLists.txt  README.md  file_checklist.md  setup_script.sh
data/config/: default.json
docs/: CHANGELOG.md  PHASE_STATUS.md  SPECTROMETERS_OVERVIEW.md  phase2.tex
include/simc/: Bremsstrahlung.h  ConfigManager.h  CosyMatrix.h  CrossSection.h  EnergyLoss.h  EventGenerator.h  ExternalRadiation.h  RadiativeCorrections.h  RandomGenerator.h  SimcConfig.h.in  SimcConfig.h.in.old  SimcTypes.h  SpectrometerOptics.h
include/simc/core/: SimcConstants.h  SimcEvent.h  SimcEventLinkDef.h
include/simc/io/: OutputManager.h  OutputManager.h~
include/simc/physics/: Bremsstrahlung.h  Bremsstrahlung.h~  CosyMatrix.h  CrossSection.h  EnergyLoss.h  EnergyLoss.h~  EventGenerator.h  EventGenerator.h~  ExternalRadiation.h  Kinematics.h  Kinematics.h~  MathUtils.h  MultipleScattering.h  MultipleScattering.h~  RadiativeCorrections.h  SpectrometerOptics.h
include/simc/spectrometers/: HMS.h  HRSl.h  HRSr.h  SHMS.h  SOS.h
include/simc/transport/: MonteCarloTransport.h  MonteCarloTransport.h~
src/: CMakeLists.txt  main.cpp
src/core/: ConfigManager.cpp  RandomGenerator.cpp  SimcEvent.cpp
src/io/: OutputManager.cpp
src/physics/: Bremsstrahlung.cpp  CosyMatrix.cpp  CrossSection.cpp  EnergyLoss.cpp  EventGenerator.cpp  ExternalRadiation.cpp  Kinematics.cpp  MathUtils.cpp  MultipleScattering.cpp  RadiativeCorrections.cpp  SpectrometerOptics.cpp
src/spectrometers/: HMS.cpp  HRSl.cpp  HRSr.cpp  SHMS.cpp  SOS.cpp
src/transport/: MonteCarloTransport.cpp  MonteCarloTransport.cpp~
tests/: CMakeLists.txt  angle_conversion_debug.cpp  quick_parser_test.cpp  test_config.cpp  test_cosy_matrix.cpp  test_cross_section.cpp  test_cross_section_fortran.cpp  test_energy_loss.cpp  test_event.cpp  test_event_generator.cpp  test_event_generator_diagnostic.cpp  test_hms_coordinate_check.cpp  test_hms_recon_regions.cpp  test_hms_reconstruction.cpp  test_hms_transport.cpp  test_hrsl_transport.cpp  test_hrsr_transport.cpp  test_integrated_generation.cpp  test_main.cpp  test_matrix_delta_terms.cpp  test_multiple_scattering.cpp  test_quick.cpp  test_random.cpp  test_shms_transport  test_shms_transport.cpp  test_sos_matrix_debug.cpp  test_sos_reconstruction.cpp  test_sos_transport.cpp  test_spectrometer_optics.cpp  test_spectrometer_optics.cpp.old  test_xp_delta_coupling.cpp
